# mrf-rs

./: Cargo.toml
.devcontainer/: .devcontainer.json  .dockerignore  Dockerfile  README-named-volume.md  README.md  devcontainer.json  docker-compose.yml  env.example  init-workspace.sh  post-create.sh
.sqlx/: query-164908210a9fce0d292f297807f98e94a390d1f3e13ff5e6ba5a7281771961ef.json  query-1d3199f617cbe2e5726b45d5d21ed21e22b6ba81f36fe26535c9d11a46d414a8.json  query-2b78fc89b1583b83c813cf106b6e666e745992bfdaea128f904e0aef14397d2f.json  query-3c6489bd55d25f0f50ca9553efcc0a8e4f92d43d22037d6468ed8196e3d22bb9.json  query-4666be318485d0644124348f73cc345f15bfb462ed51714f45a8584e6440bfde.json  query-5b52d7d9a70d63e944ed962e74e7274b311ccb728ca818d5e1717bc4d3f077b7.json  query-6b4ccd50e9ba776eb92ce0dc31abac92dc4450a3830edcd9613f63f35a4c73ee.json  query-9872eab77c2dca85645161af24b3596097b6c1dab6b029ccdfe1979fa6e2828f.json  query-989ff735686894e1a9992201ce9c35c7840f77bc694f5f8a44f0075ac5b6ead2.json  query-9f60403e474d36ee23611051d75a6816ad292273b55f54bb7d971f421711492d.json  query-a4220089c75b0bee5425705bfd794c852482e367ba75ecf1b5e50fcb76a56826.json  query-d2991b22bd3e6e827ccd08ba8cc722430d00d867d3245c9c25f26592feb43204.json  query-e3e713c0290e82cb22e36a534f429ff0b687fc905f23f5686ae461aa7fab09b1.json
migrations/: 1_setup.down.sql  1_setup.up.sql  2_add_foreign_key_indexes.down.sql  2_add_foreign_key_indexes.up.sql  3_mrf.down.sql  3_mrf.up.sql  4_fix_npi_types.down.sql  4_fix_npi_types.up.sql
src/: lib.rs  parser.rs  types.rs
src/sources/: base.rs  mod.rs  united_health.rs
src/types/: allowed_amount.rs  common.rs  in_network.rs  mod.rs  provider_reference.rs  table_of_contents.rs  unified.rs
tests/: parse_real_file.rs  united_health_performance.rs
tests/allowed-amounts/: 2025-06-01_10-ROADS-EXPRESS-LLC_10-ROADS-EXPRESS-LLC_allowed-amounts.json
tests/table-of-contents/: 2025-06-01_1-800-RADIATOR-OF-DALLAS-FORT-WORTH-LLC_index.json
