[package]
name = "mrf-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for processing healthcare price transparency Machine Readable Files (MRF)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/mrf-rs"
keywords = ["healthcare", "mrf", "price-transparency", "cms"]
categories = ["parser-implementations", "database"]

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# HTTP client with compression support
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "gzip", "deflate", "brotli"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "bigdecimal"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
debug = true